<html>
<head>
<title>Chris Korda: News</title>
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
<meta name="author" content="Chris Korda">
<meta name="description" content="Chris Korda's home page">
<meta name="viewport" content="width=device-width, initial-scale=1">
<link href="./style.css" rel=stylesheet title=default type=text/css>
</head>
<body>
<div class=menu>
<p><table id="navigation">
<tr>
<th><a href="index.html">Home</a></th>
<th><a href="music.html">Music</a></th>
<th><a href="software.html">Software</a></th>
<th><a href="art.html">Art</a></th>
<th><a href="words.html">Words</a></th>
<th><a href="contact.html">Contact</a></th>
</tr>
</table>
</div>
<div id=body>
<!--  content goes HERE  -->

<p>Read: <a href="https://victimofleisure.github.io/Polymeter/helpframe.html">Polymeter Help</a> (or as a <a href="https://victimofleisure.github.io/Polymeter/Help/printable/PolymeterHelp.htm">single page</a>)

<p>Read: <a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Chris Korda: A voice for the future</a> in Trommel

<p>See: <a href="https://8billionangels.org/">8 Billion Angels</a>, a film about overpopulation

<p>Buy: <a href="https://abonnement.sopress.net/common/product-article/1048">10-page article on CK & CoE</a> in Big Bang mag

<p>Read: <a href="https://www.theransomnote.com/music/articles/apologize-to-the-future-chris-korda-on-the-crisis-facing-our-planet/">Chris Korda on the crisis facing our planet</a> in Ransom Note

<p>Buy: <a href="https://www.diggersfactory.com/vinyl/230007/chris-korda-the-church-of-euthanasia-eight-billion-humans-cant-be-wrong">Eight Billion Humans Can't Be Wrong 2x12"</a>

<p>Read: <a href="https://www.pagina12.com.ar/328424-la-musica-electronica-esta-muerta">&iquest;La m&uacute;sica electr&oacute;nica est&aacute; muerta?</a> in Pagina/12
