@@ -1,9 +1,10 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>Chris Korda: Press</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Chris Korda">
-<meta name="date" content="2021-08-20">
+<meta name="date" content="2021-11-29">
 <meta name="description" content="Chris Korda: Press">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./style.css" rel=stylesheet title=default type=text/css>
