@@ -1,9 +1,10 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>Chris Korda: Music</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Chris Korda">
-<meta name="date" content="2021-05-15">
+<meta name="date" content="2021-11-29">
 <meta name="description" content="Chris Korda's home page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./style.css" rel=stylesheet title=default type=text/css>
@@ -189,6 +190,12 @@
 <th>Venue</th>
 <th>City</th>
 <th>Country</th>
+</tr>
+<tr>
+<td>11/20/21</td>
+<td>Zentralw&auml;scherei</td>
+<td>Z&uuml;rich</td>
+<td>Switzerland</td>
 </tr>
 <tr>
 <td>11/05/21</td>
