@@ -1,7 +1,8 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>$$TITLE</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Chris Korda">
 <meta name="date" content="$$DATE">
 <meta name="description" content="$$DESCRIPTION">
