@@ -1,9 +1,10 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>Chris Korda: Words</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Chris Korda">
-<meta name="date" content="2021-05-15">
+<meta name="date" content="2021-11-29">
 <meta name="description" content="Chris Korda's home page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./style.css" rel=stylesheet title=default type=text/css>
@@ -26,7 +27,7 @@
 
 <h2>Chris Korda: Words</h2>
 
-<p><a href="tlor/a_thin_layer_of_oily_rock.html">A Thin Layer of Oily Rock</a>
+<p><a href="tlor/a_thin_layer_of_oily_rock.html">A Thin Layer of Oily Rock</a>; this slideshow was presented recently, here's <a href="https://archive.org/details/a-thin-layer-of-oily-rock-at-la-station-paris-video">video</a> and a <a href="tlor/a_thin_layer_of_oily_rock_la_station.html">transcript</a>.
 
 <p><a href="http://metadelusion.blogspot.com/">Metadelusion</a>
 
@@ -47,6 +48,7 @@ non-modal music</a> (NIME 2015)
 
 <p><table border=1>
 <tr><th>Date</th><th>Title</th><th>Venue</th><th>City</th><th>Country</th></tr
+<tr><td>10/01/21</td><td><a href="https://archive.org/details/a-thin-layer-of-oily-rock-at-la-station-paris-video">A Thin Layer of Oily Rock</a></td><td>La Station</td><td>Paris</td><td>France</td></tr>
 <tr><td>01/29/20</td><td>Polymeter: A Musical Revolution</td><td>Arkaoda</td><td>Berlin</td><td>Germany</td></tr>
 <tr><td>08/10/18</td><td>A Thin Layer of Oily Rock</td><td>Gallery Spektrum</td><td>Berlin</td><td>Germany</td></tr>
 <tr><td>08/09/18</td><td>Chris Korda Introduces PotterDraw</td><td>Gallery Spektrum</td><td>Berlin</td><td>Germany</td></tr>
